<resources>
    <string name="app_name">MediaPlayer</string>
    <string name="zero">0:00</string>
    <string name="page_title">Home</string>
    <string name="favorite">favorite</string>
    <string name="content_description_favorite">content_description_favorite</string>
    <string name="content_description_search">content_description_search</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="content_description_more">content_description_more</string>
    <string name="more">more</string>
    <string name="content_description_media">content_description_media"</string>
    <string name="album">Album</string>
    <string name="createAlbum"><u>Tạo mới</u></string>
    <string name="song">Bài hát</string>
    <string name="showMore"><u>Hiển thị thêm</u></string>
    <string name="songLiked">Bài hát yêu thích</string>
    <string name="albumLiked">Album yêu thích</string>
    <string name="title_activity_search">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_song_like">SongLike</string>
</resources>