<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:contentDescription="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/searchItem"
        android:contentDescription="@string/content_description_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/favorite"
        android:contentDescription="@string/content_description_favorite"
        android:icon="@drawable/ic_favorite_24dp"
        android:title="@string/favorite"
        app:showAsAction='always' />
    <item
        android:id="@+id/more"
        android:contentDescription="@string/content_description_more"
        android:title="@string/more"
        app:showAsAction="never" />
</menu>