<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/nav_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Collapsed"
            app:expandedTitleMarginBottom="28dp"
            app:expandedTitleMarginStart="72dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Expanded">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:menu="@menu/top_app_bar"
                app:navigationIcon="@drawable/ic_menu_24dp"
                />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_margin="10dp"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <!-- Scrollable content -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/linearAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_albums"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:text="@string/album"
                        android:textColor="#000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_createAlbum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:minHeight="16dp"
                        android:padding="0dp"
                        android:text="@string/createAlbum"
                        android:textColor="#000000"
                        app:elevation="0dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_album"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="12"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_song"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:text="@string/song"
                        android:textColor="#000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_allSong"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/showMore"
                        android:minHeight="32dp"
                        android:textColor="#000000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_song"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>